package de.dhbw.course1.model.train;

public class RegionalTrain extends BaseTrain {

    @Override
    public String toString() {
        return String.format("RegionalTrain{%s} ", super.toString());
    }
}
