package de.dhbw.course1.model.train;

public class PassengerWagon extends BaseWagon {
}
