@startuml
'https://plantuml.com/class-diagram

'skinparam groupInheritance 2

scale 0.8

interface Train {
  String getNumber()
}
abstract class BaseTrain {
  String number
  Locomotive loco
  List wagons
}
class LongDistanceTrain
class RegionalTrain
class Locomotive

class Journey
interface Driver
class TrainDriver

interface Wagon
abstract class BaseWagon
class PassengerWagon
class FreightWagon

'class Network
class Route
class Section
class Timetable

' Train model
Train             <|..          BaseTrain         : realizes
BaseTrain         <|--          LongDistanceTrain : is a
BaseTrain         <|--          RegionalTrain     : is a
BaseTrain         -l->          Locomotive        : > has
BaseTrain         o-r-  "0..*"  Wagon             : consists of
Wagon             <|..          BaseWagon         : realizes
BaseWagon         <|--          PassengerWagon    : is a
BaseWagon         <|--          FreightWagon      : is a

' Route model
'Network      "1"  -l-   "n"    Route
Route             *-u-  "1..*" Section            : < composed\nof

' Journey model
Route        "n"  --    "m"    Train
(Route,Train)     ..           Journey
Journey      "n"  -r-o  "1"    Timetable
Journey           -u->         Driver             : < drives
Driver            <|.u.        TrainDriver        : realizes

@enduml